--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,20 @@
 :root{
     --light-green: #49c35d;
     --dark-green: #338841;
+    --flex-direction: row;
+    --font-size-1: 3.1rem;
+    --font-size-3: 2rem;
+    --margin-bottom-2: 2.5rem;
+    --padding-y-2: 2rem;
 }
 
 body{
     margin: 0;
     font-size: 1.2rem;
+    line-height: 1.7;
+}
+h1, h2, h3{
+    margin:0;
 }
 
 a{
@@ -14,34 +23,49 @@ a{
 }
 
 .button{
-    padding: 1rem 1.5rem;
+    padding: .5rem 1rem;
     border-radius: 5px;
     transition: color .6s;
 }
-.button:hover{
-    color: var(--light-green);
-}
 
-.button--primary{
-    border-radius: 30px;
+.button--dark-green{
+    color: #fff;
+    border-radius: 5px;
     background: var(--dark-green);
     transition: background .6s;
 }
 
-.button--primary:hover{
-    background: none;
-    color: #fff;
+@media(any-hover: hover){
+    .button:hover{
+        color: var(--light-green);
+    }
+    .button--dark-green:hover{
+        background: none;
+        color: #fff;
+    }
+}
+.capitalize{
+    text-transform: uppercase;
 }
 
 .container{
-    max-width: 1400px;
+    max-width: 1300px;
     margin: auto;
 }
 
 .hero{
     box-sizing: border-box;
     height: 80vh;
-    padding: 1rem;
+    padding: 1rem 0;
+}
+
+.navigation__list{
+    display: flex;
+    list-style: none;
+}
+
+.section-padding{
+    padding: var(--padding-y-2);
 }
 
 /* HOME PAGE */
@@ -49,7 +73,7 @@ a{
 /* Header */
 .home__hero{
     background: linear-gradient(to right, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)),
-    url('../images/heroes/pexels-photo-1552242.jpeg') center center/cover;
+    url('../images/heroes/home.jpeg') center center/cover;
     color: #fff;
 }
 
@@ -59,13 +83,10 @@ a{
     align-items: center;
 }
 
-.navigation__list{
-    display: flex;
-    list-style: none;
-}
-
 .hero__header{
-    margin-bottom: 2rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font-size: var(--font-size-1);
 }
 
 .hero__content{
@@ -75,3 +96,79 @@ a{
     align-items: center;
     justify-content: center;
 }
+
+.section-header{
+    font-size: var(--font-size-3);
+    margin-bottom: var(--margin-bottom-2);
+}
+
+/* Benefits */
+
+.benefits{
+    text-align: center;
+}
+
+.benefits-header{
+    color: #333;
+}
+
+.benefits__cards{
+    display: flex;
+    flex-direction: var(--flex-direction);
+}
+
+.benefits__card{
+    flex: 1;
+    padding: 0 1rem;
+}
+
+.benefits__icon{
+    margin-bottom: 1rem;
+    color: var(--dark-green);
+}
+
+.benefits__card-header{
+    text-transform: capitalize;
+    color: #333;
+    white-space: nowrap;
+    margin-bottom: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Course-teaser and Courses
+.course-teaser{
+    text-align: center;
+    padding: 1.5rem;
+}
+.course-teaser a{
+    display: inline-block;
+    margin-bottom: 1rem;
+}
+
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+}
+
+.course__image{
+    width: 100%;
+} */
+
+
