--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 :root{
     --light-green: #49c35d;
     --dark-green: #338841;
+    --dark-grey: #333;
     --flex-direction: row;
     --font-size-1: 3.1rem;
     --font-size-3: 2rem;
-    --margin-bottom-2: 2.5rem;
+    --margin-bottom-2: 2rem;
     --padding-y-2: 2rem;
 }
 
@@ -13,7 +14,7 @@ body{
     font-size: 1.2rem;
     line-height: 1.7;
 }
-h1, h2, h3{
+h1, h2, h3, h4{
     margin:0;
 }
 
@@ -23,6 +24,7 @@ a{
 }
 
 .button{
+    display: inline-block;
     padding: .5rem 1rem;
     border-radius: 5px;
     transition: color .6s;
@@ -32,15 +34,17 @@ a{
     color: #fff;
     border-radius: 5px;
     background: var(--dark-green);
-    transition: background .6s;
+    transition: background .6s, transform .4s;
 }
 
 @media(any-hover: hover){
     .button:hover{
         color: var(--light-green);
     }
+    
     .button--dark-green:hover{
-        background: none;
+        transform: scale(1.1);
+        background: var(--light-green);
         color: #fff;
     }
 }
@@ -59,12 +63,18 @@ a{
     padding: 1rem 0;
 }
 
-.navigation__list{
-    display: flex;
+.vertical-list,
+.horizontal-list{
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.section-padding{
+.horizontal-list{
+    display: flex;
+}
+
+.section{
     padding: var(--padding-y-2);
 }
 
@@ -72,7 +82,7 @@ a{
 
 /* Header */
 .home__hero{
-    background: linear-gradient(to right, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)),
+    background: linear-gradient(to right, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)),
     url('../images/heroes/home.jpeg') center center/cover;
     color: #fff;
 }
@@ -84,8 +94,8 @@ a{
 }
 
 .hero__header{
-    margin-top: 0;
-    margin-bottom: 1rem;
+    margin-top: 0; 
+    margin-bottom:  1rem; 
     font-size: var(--font-size-1);
 }
 
@@ -100,6 +110,7 @@ a{
 .section-header{
     font-size: var(--font-size-3);
     margin-bottom: var(--margin-bottom-2);
+    text-transform: uppercase
 }
 
 /* Benefits */
@@ -109,33 +120,78 @@ a{
 }
 
 .benefits-header{
-    color: #333;
+    color: var(--dark-grey);
 }
 
-.benefits__cards{
+.benefit__cards{
     display: flex;
     flex-direction: var(--flex-direction);
 }
 
-.benefits__card{
+.benefit__cards > *{
     flex: 1;
     padding: 0 1rem;
 }
 
-.benefits__icon{
+.benefit__card-icon{
     margin-bottom: 1rem;
     color: var(--dark-green);
 }
 
-.benefits__card-header{
+.benefit__card-header{
     text-transform: capitalize;
     color: #333;
     white-space: nowrap;
     margin-bottom: 1rem;
 }
 
+/* MEMBERSHIPS */   
+.memberships{
+    text-align: center;
+    background: #f7f7f7;
+}
 
+.memberships__heading{
+    color: var(--dark-grey);
+}
 
+.memberships__cards{
+    display: flex;
+    flex-direction: var(--flex-direction);
+    justify-content: center;
+}
+
+.memberships__cards > *{
+    margin: 0 2rem;
+    padding: 3rem;
+    background: #fff;
+}
+
+/* .membership__card-plan{
+    color: var(--dark-green);
+} */
+
+.membership__card-reacharge-rate{
+    font-weight: normal;
+}
+
+.membership__card-price{
+    color: var(--dark-green);
+}
+.membership__card-reacharge-rate,
+.membership__card-price{
+    margin-bottom: .8rem;
+}
+
+.membership__card-offerings > *{
+    padding: .5rem;
+    border-bottom: 1px solid #efefef;
+}
+
+.membership__card-offerings > *:last-child{
+    border-bottom: none;
+    margin-bottom: 1.3rem;
+}
 
 
 
