--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --dark-green: #338841;
     --dark-grey: #333;
     --flex-direction: row;
+    --hamburger-menu-display: none;
     --font-size-1: 3.1rem;
     --font-size-3: 2rem;
     --margin-bottom-2: 2rem;
@@ -27,6 +28,9 @@ a{
     display: inline-block;
     padding: .5rem 1rem;
     border-radius: 5px;
+}
+
+.button--light-green{
     transition: color .6s;
 }
 
@@ -38,7 +42,7 @@ a{
 }
 
 @media(any-hover: hover){
-    .button:hover{
+    .button--light-green:hover{
         color: var(--light-green);
     }
     
@@ -84,7 +88,7 @@ a{
 /* HOME PAGE */
 
 /* Header */
-.home__hero{
+.hero--home{
     background: linear-gradient(to right, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)),
     url('../images/heroes/home.jpeg') center center/cover;
     color: #fff;
@@ -94,6 +98,12 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.hamburger-menu{
+    display: var(--hamburger-menu-display);
+    font-size: 1.6rem;
+    cursor: pointer;
 }
 
 .hero__header{
@@ -168,11 +178,15 @@ a{
     margin: 0 2rem;
     padding: 3rem;
     background: #fff;
+    transition: background .5s;
 }
 
-/* .membership__card-plan{
-    color: var(--dark-green);
-} */
+@media(any-hover: hover){
+    .memberships__cards > *:hover{
+      background: #efefef;
+    }
+}
+
 
 .membership__card-reacharge-rate{
     font-weight: normal;
@@ -196,6 +210,8 @@ a{
     margin-bottom: 1.3rem;
 }
 
+
+/* MAIN FOOTER */
 .main-footer{
     background: #333;
     color: #fff;
@@ -206,9 +222,6 @@ a{
     justify-content: space-between;
     align-items: center;
 }
-
-
-
 
 
 
