--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
     --light-green: #49c35d;
     --dark-green: #338841;
     --dark-grey: #333;
-    --flex-direction: row;
-    --hamburger-menu-display: none;
     --font-size-1: 3.1rem;
     --font-size-3: 2rem;
     --margin-bottom-2: 2rem;
@@ -85,6 +83,13 @@ a{
     padding: var(--padding-y-2);
 }
 
+.section-header{
+    font-size: var(--font-size-3);
+    margin-bottom: var(--margin-bottom-2);
+    text-transform: uppercase
+}
+
+
 /* HOME PAGE */
 
 /* Header */
@@ -98,6 +103,10 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.hamburger-menu{
+    --hamburger-menu-display: none;
 }
 
 .hamburger-menu{
@@ -120,12 +129,6 @@ a{
     justify-content: center;
 }
 
-.section-header{
-    font-size: var(--font-size-3);
-    margin-bottom: var(--margin-bottom-2);
-    text-transform: uppercase
-}
-
 /* Benefits */
 
 .benefits{
@@ -134,6 +137,9 @@ a{
 
 .benefits-header{
     color: var(--dark-grey);
+}
+.benefit__cards{
+    --flex-direction: row;
 }
 
 .benefit__cards{
@@ -166,6 +172,10 @@ a{
 
 .memberships__heading{
     color: var(--dark-grey);
+}
+
+.benefit__cards{
+    --flex-direction: row;
 }
 
 .memberships__cards{
