--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --font-size-1: 3.1rem;
     --font-size-3: 2rem;
     --margin-bottom-2: 2rem;
-    --padding-y-2: 2rem;
+    --padding-y: 2rem;
 }
 
 body{
@@ -13,6 +13,7 @@ body{
     font-size: 1.2rem;
     line-height: 1.7;
 }
+
 h1, h2, h3, h4{
     margin:0;
 }
@@ -50,6 +51,7 @@ a{
         color: #fff;
     }
 }
+
 .capitalize{
     text-transform: uppercase;
 }
@@ -69,18 +71,30 @@ a{
 }
 
 .vertical-list,
-.horizontal-list{
+.horizontal-list,
+.main-navigation{
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.horizontal-list{
+.horizontal-list,
+.main-navigation{
     display: flex;
 }
 
+.main-navigation{
+    --flex-direction: row;
+    --scale-size: scale(1);
+}
+
+.main-navigation{
+    flex-direction: var(--flex-direction);
+    transform: var(--scale-size);
+}
+
 .section{
-    padding: var(--padding-y-2);
+    padding: var(--padding-y);
 }
 
 .section-header{
@@ -138,18 +152,15 @@ a{
 .benefits-header{
     color: var(--dark-grey);
 }
+
 .benefit__cards{
-    --flex-direction: row;
+    --number-of-columns: repeat(4, 1fr);
 }
 
 .benefit__cards{
-    display: flex;
-    flex-direction: var(--flex-direction);
-}
-
-.benefit__cards > *{
-    flex: 1;
-    padding: 0 1rem;
+    display: grid;
+    grid-template-columns: var(--number-of-columns);
+    gap: 2rem;
 }
 
 .benefit__card-icon{
@@ -172,10 +183,6 @@ a{
 
 .memberships__heading{
     color: var(--dark-grey);
-}
-
-.benefit__cards{
-    --flex-direction: row;
 }
 
 .memberships__cards{
@@ -212,7 +219,7 @@ a{
 
 .membership__card-offerings > *{
     padding: .5rem;
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1.3px solid #efefef;
 }
 
 .membership__card-offerings > *:last-child{
