--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@
     --light-green: #49c35d;
     --dark-green: #338841;
     --dark-grey: #333;
-    --font-size-1: 3.1rem;
-    --font-size-3: 2rem;
-    --margin-bottom-2: 2rem;
-    --padding-y: 2rem;
+    --section-header-font-size: 2rem;
+    --section-header-margin-bottom: 2rem;
+    --section-padding: 2rem 
 }
 
 body{
@@ -64,6 +63,7 @@ a{
 .hilight{
     color: var(--light-green);
 }
+
 .hero{
     box-sizing: border-box;
     height: 80vh;
@@ -94,15 +94,14 @@ a{
 }
 
 .section{
-    padding: var(--padding-y);
+    padding: var(--section-padding);
 }
 
 .section-header{
-    font-size: var(--font-size-3);
-    margin-bottom: var(--margin-bottom-2);
+    font-size: var(--section-header-font-size);
+    margin-bottom: var(--section-header-margin-bottom);
     text-transform: uppercase
 }
-
 
 /* HOME PAGE */
 
@@ -131,9 +130,16 @@ a{
 }
 
 .hero__header{
-    margin-top: 0; 
-    margin-bottom:  1rem; 
-    font-size: var(--font-size-1);
+    --font-size: 3.1rem; 
+    --margin-top: 0rem;
+    --margin-bottom: 1rem;
+}
+
+.hero__header{
+    margin-top: var(--margin-top);
+    margin-bottom:  var(--margin-bottom);
+    text-align: center;
+    font-size: var(--font-size);
 }
 
 .hero__content{
@@ -195,7 +201,7 @@ a{
 .memberships__cards{
     --flex-direction: row;
     --card-padding: 2rem 3rem;
-    --right-and-left-card-margin: 2rem;
+    --right-and-left-card-margin: 4rem;
     --bottom-card-margin: 0rem;
 }
 
@@ -208,12 +214,14 @@ a{
 @media(max-width: 1000px){
     .memberships__cards {
         --card-padding: 2rem 2rem;
+        --right-and-left-card-margin: 3rem;
     }
 }
 
 @media(max-width: 900px){
     .memberships__cards{
         --card-padding: 2rem 1rem;
+        --right-and-left-card-margin: 2rem;
     }
 }
 
@@ -261,14 +269,22 @@ a{
 
 
 /* MAIN FOOTER */
+
 .main-footer{
     background: #333;
     color: #fff;
 }
 
 .main-footer__contents{
+    --main-footer-flex-direction: row;
+}
+
+
+.main-footer__contents{
     display: flex;
+    flex-direction: var(--flex-direction);
     justify-content: space-between;
+    text-align: center;
     align-items: center;
 }
 
