--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,17 @@ a{
 }
 
 .container{
-    max-width: 1100px;
+    --max-width: 1100px;
+}
+
+@media(min-width: 1600px){
+    .container{
+        --max-width: 1450px;
+    }
+}
+
+.container{
+    max-width: var(--max-width);
     margin: auto;
 }
 
