--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,6 +6,11 @@
 
 /* HOME PAGE */
 
+.hero--home{
+    --background: linear-gradient(to right, rgba(0, 0, 0, .30), rgba(0, 0, 0, .30)),
+    url('../images/heroes/home-mobile.jpeg') center center/cover;
+}
+
 .benefit__cards{
      --number-of-columns: 1fr;
 }
@@ -13,7 +18,7 @@
 .memberships__cards{
     --flex-direction: column;
     --right-and-left-card-margin: 0rem;
-    --bottom-card-margin: 2rem;
+    --bottom-card-margin: 3rem;
 }
 
 .memberships__cards{
